crates/mold_parser/src/snapshots/mold_parser__tests__subquery_isolated_recovery.snap
---
source: crates/mold_parser/src/lib.rs
expression: tree
---
SOURCE_FILE@0..77
  SELECT_STMT@0..77
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..20
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..20
        IDENT@14..19 "users"
        WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..77
      WHERE_KW@20..25 "WHERE"
      WHITESPACE@25..26 " "
      BINARY_EXPR@26..77
        IN_EXPR@26..56
          COLUMN_REF@26..29
            IDENT@26..28 "id"
            WHITESPACE@28..29 " "
          IN_KW@29..31 "IN"
          WHITESPACE@31..32 " "
          L_PAREN@32..33 "("
          SELECT_STMT@33..54
            SELECT_KW@33..39 "SELECT"
            WHITESPACE@39..40 " "
            SELECT_ITEM_LIST@40..43
              SELECT_ITEM@40..43
                COLUMN_REF@40..43
                  IDENT@40..42 "id"
                  WHITESPACE@42..43 " "
            FROM_CLAUSE@43..54
              FROM_KW@43..47 "FROM"
              WHITESPACE@47..48 " "
              TABLE_REF@48..54
                IDENT@48..54 "BROKEN"
          R_PAREN@54..55 ")"
          WHITESPACE@55..56 " "
        AND_KW@56..59 "AND"
        WHITESPACE@59..60 " "
        BINARY_EXPR@60..77
          COLUMN_REF@60..67
            IDENT@60..66 "status"
            WHITESPACE@66..67 " "
          EQ@67..68 "="
          WHITESPACE@68..69 " "
          LITERAL@69..77
            STRING@69..77 "'active'"
