crates/mold_parser/src/snapshots/mold_parser__tests__update_from.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..75
  UPDATE_STMT@0..75
    UPDATE_KW@0..6 "UPDATE"
    WHITESPACE@6..7 " "
    TABLE_REF@7..13
      IDENT@7..12 "users"
      WHITESPACE@12..13 " "
    SET_CLAUSE@13..33
      SET_KW@13..16 "SET"
      WHITESPACE@16..17 " "
      SET_ITEM@17..33
        IDENT@17..22 "email"
        WHITESPACE@22..23 " "
        EQ@23..24 "="
        WHITESPACE@24..25 " "
        COLUMN_REF@25..33
          IDENT@25..26 "c"
          DOT@26..27 "."
          IDENT@27..32 "email"
          WHITESPACE@32..33 " "
    FROM_CLAUSE@33..49
      FROM_KW@33..37 "FROM"
      WHITESPACE@37..38 " "
      TABLE_REF@38..49
        IDENT@38..46 "contacts"
        WHITESPACE@46..47 " "
        IDENT@47..48 "c"
        WHITESPACE@48..49 " "
    WHERE_CLAUSE@49..75
      WHERE_KW@49..54 "WHERE"
      WHITESPACE@54..55 " "
      BINARY_EXPR@55..75
        COLUMN_REF@55..64
          IDENT@55..60 "users"
          DOT@60..61 "."
          IDENT@61..63 "id"
          WHITESPACE@63..64 " "
        EQ@64..65 "="
        WHITESPACE@65..66 " "
        COLUMN_REF@66..75
          IDENT@66..67 "c"
          DOT@67..68 "."
          IDENT@68..75 "user_id"
