crates/mold_parser/src/snapshots/mold_parser__tests__update_multiple_columns.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..69
  UPDATE_STMT@0..69
    UPDATE_KW@0..6 "UPDATE"
    WHITESPACE@6..7 " "
    TABLE_REF@7..13
      IDENT@7..12 "users"
      WHITESPACE@12..13 " "
    SET_CLAUSE@13..57
      SET_KW@13..16 "SET"
      WHITESPACE@16..17 " "
      SET_ITEM@17..29
        IDENT@17..21 "name"
        WHITESPACE@21..22 " "
        EQ@22..23 "="
        WHITESPACE@23..24 " "
        LITERAL@24..29
          STRING@24..29 "'Bob'"
      COMMA@29..30 ","
      WHITESPACE@30..31 " "
      SET_ITEM@31..57
        IDENT@31..36 "email"
        WHITESPACE@36..37 " "
        EQ@37..38 "="
        WHITESPACE@38..39 " "
        LITERAL@39..57
          STRING@39..56 "'bob@example.com'"
          WHITESPACE@56..57 " "
    WHERE_CLAUSE@57..69
      WHERE_KW@57..62 "WHERE"
      WHITESPACE@62..63 " "
      BINARY_EXPR@63..69
        COLUMN_REF@63..66
          IDENT@63..65 "id"
          WHITESPACE@65..66 " "
        EQ@66..67 "="
        WHITESPACE@67..68 " "
        LITERAL@68..69
          INTEGER@68..69 "1"
